syntax="proto3";
option go_package = "./ipam";

service ipam {
    rpc MapEndpointIP (MapRequest) returns (MapResponse);
    rpc UnmapEndpointIP (UnmapRequest) returns (UnmapResponse);
    rpc GetHomePodIP (GetHomePodIPRequest) returns (GetHomePodIPResponse);
    rpc BelongsToPodCIDR (BelongsRequest) returns (BelongsResponse);
    rpc GetClusterID (ClusterIDRequest) returns (ClusterIDResponse);
    rpc DoesClusterMappingExist (ClusterMappingRequest) returns (ClusterMappingResponse);
}

message MapRequest {
    string clusterID = 1;
    string ip = 2;
}

message MapResponse {
    string ip = 1;
}

message UnmapRequest {
    string clusterID = 1;
    string ip = 2;
}

message UnmapResponse {}

message GetHomePodIPRequest {
    string clusterID = 1;
    string ip = 2;
}

message GetHomePodIPResponse {
    string homeIP = 1;
}

message BelongsRequest {
    string ip = 1;
}

message BelongsResponse {
    bool belongs = 1;
}
message ClusterIDRequest {
    string ip = 1;
}

message ClusterIDResponse {
    string clusterID = 1;
}

message ClusterMappingRequest {
    string clusterID = 1;
}

message ClusterMappingResponse {
    bool doesExist = 1;
}
